# c5tree

./: .gitignore  LICENSE  README.md  pyproject.toml
c5tree/: __init__.py  _classifier.py  _pruner.py  _splitter.py  _tree.py
c5tree/.github/workflows/: ci.yml
c5tree/c5tree/: __init__.py
c5tree/examples/: demo.py
c5tree/tests/: test_c5classifier.py
tests/: conftest.py
