[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c5tree"
version = "0.1.0"
description = "C5.0 Decision Tree Classifier — a pure-Python, scikit-learn-compatible implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["machine learning", "decision tree", "C5.0", "scikit-learn", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pandas>=1.5",
    "matplotlib",       # for future visualisation utilities
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
]

[project.urls]
Homepage = "https://github.com/yourusername/c5tree"
Repository = "https://github.com/yourusername/c5tree"
"Bug Tracker" = "https://github.com/yourusername/c5tree/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["c5tree*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["c5tree"]
omit = ["tests/*"]
